# puppyguard

./: Makefile.am  README.md  bootstrap  configure.ac  ics.cfg  puppyguard.cfg
include/: alsa.h  am.h  audio.h  cfg.h  codec.h  codecjpeg.h  codecomx.h  http.h  iofd.h  sigfd.h  v4l2.h  video.h
scripts/: puppyguard-mail.py.in
shine/: bitstream.h  formatbits.c  formatbits.h  huffman.c  huffman.h  l3bitstream.h  l3mdct.h  l3subband.h  mult_noarch_gcc.h  tables.c  tables.h
src/: alsa.c  am.c  audio.c  cfg.c  codecjpeg.c  codeclib.c  codecmp3.c  codecomx.c  http.c  iofd.c  main.c  sigfd.c  v4l2.c  video.c
